--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Arfat",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0"
   }
 }
